# c-bar

./: .clangd  .gitignore  Makefile  meson.build  theme.css
include/: bar.h  modules.h  utils.h
include/modules/: battery.h  time.h  workspace.h
src/: bar.c  main.c  modules.c  utils.c
src/modules/: battery.c  time.c  workspace.c
